--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@
    stage: deploy
    script:
      - gem install jekyll
-     - gem install bundler
+     - gem install bundler -v 1.17.3
      - gem install minima
      - bundle exec jekyll build -d public/ --trace
    artifacts:
