--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ url: "https://novimatrem.gitlab.io/" # the base hostname & protocol for your sit
 
 # Build settings
 theme: minima
+future: true
 plugins:
   - jekyll-feed
 
