--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ url: "https://novimatrem.gitlab.io/" # the base hostname & protocol for your sit
 # Build settings
 theme: minima
 future: true
+safe: false
 plugins:
   - jekyll-feed
 
