--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Novimatrem - Blog
+title: Tea, Linux, Tea - Novimatrem's Blog
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
   Novimatrem's blog of words and things. 🐈🐱 - Hobbyist Linux systems administrator, open-source software & web-developer, and free-software advocate.
