--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,4 @@
      paths:
        - public
    only:
-     - master # this job will affect only the 'master' branch
+     - main # this job will affect only the 'main' branch
